--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "core-js": "^2.6.5",
     "three": "^0.108.0",
     "vant": "^2.2.1",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
