--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "three": "^0.108.0",
+    "three-obj-mtl-loader": "^1.0.3",
     "vant": "^2.2.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
@@ -20,10 +21,14 @@
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "babel-eslint": "^10.0.1",
+    "css-loader": "^3.2.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "exports-loader": "^0.7.0",
+    "import-three-examples": "^2.2.4",
     "imports-loader": "^0.8.0",
+    "style-loader": "^1.0.0",
+    "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
